Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-30730

Crash when closing pane with FakeVim

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Not Evaluated
    • Qt Creator 14.0.0-beta2
    • Qt Creator 13.0.0
    • FakeVim
    • None
    • Ubuntu jammy, i3wm
    • Linux/X11
    • 20dda9d5f (14.0)

    Description

      When closing a split via ctrl+w, ctrl+c, Qt Creator will crash. This only happens when there are multiple panes of the same file currently open.

      repro steps:

      1. open any file.
      2. Open another split of the same file e.g. ctrl+w,ctrl+v
      3. close one of them via ctrl+w,ctrl+c

      Expected Result: The currently focused pane closes

      Actual Result: Crash / Qt Creator closes.

       

      Workaround: Passing out of vim mode and then using the traditional qt creator shortcut i.e. [",", Ctrl+E, 0]. Or just closing it with your mouse

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              hjk hjk
              brynnjolf Brynn Engbers
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes