FakeVim: Avoid possible nullptr access

Amends 9f0919c4a3875d8baffc7b6f2b5f7d2e25e198c3.

Fixes: QTCREATORBUG-30730
Change-Id: I389412a0b069fd34a625075d97c89f106c5b5f74
Reviewed-by: hjk <hjk@qt.io>